// Table to store user information (unchanged, but good practice)
Table users {
  id int [pk, increment]
  name varchar(255) [not null]
  email varchar(255) [not null, unique]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

// Main table to define **Workflow Templates**
Table workflow_templates {
  id int [pk, increment]
  name varchar(255) [not null]
  description text
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

// Defines the **Ordered Steps** for a specific **Workflow Template**
Table template_steps {
  id int [pk, increment]
  workflow_template_id int [not null, ref: > workflow_templates.id]
  step_name varchar(255) [not null] // Name of this specific step in the flow
  step_order int [not null] // Sequence of the step in the template
  metadata json // Optional metadata for the step (e.g., instructions, form fields)
  completion_rule_type rule_enum [not null] // Type of rule: 'ALL', 'ANY', 'K_OF_N'
  k_value int // Required for 'K_OF_N' rule type
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    (workflow_template_id, step_order) [unique]
  }

}

// Defines the allowed **Assignee Roles/Groups** for a Step in a Template
Table template_step_assignees {
  template_step_id int [not null, ref: > template_steps.id]
  user_id int [not null, ref: > users.id] // Could also be a Group ID if groups are needed
  created_at timestamp [default: `now()`]

  indexes {
    (template_step_id, user_id) [pk]
  }

}

// **Instances** of workflows being executed
Table workflows {
  id int [pk, increment]
  workflow_template_id int [not null, ref: > workflow_templates.id]
  current_step_order int [not null, default: 1] // Tracks the current position in the flow
  status workflow_status_enum [not null] // e.g., 'IN_PROGRESS', 'COMPLETED', 'CANCELED'
  started_at timestamp [default: `now()`]
  completed_at timestamp
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

// Tracks the **Specific Assignees** for an **Active Workflow Instance** and its **Current Step**
Table workflow_assignees {
  workflow_id int [not null, ref: > workflows.id]
  template_step_id int [not null, ref: > template_steps.id] // Links to the step's definition
  assignee_user_id int [not null, ref: > users.id]
  created_at timestamp [default: `now()`]

  indexes {
    (workflow_id, template_step_id, assignee_user_id) [pk]
    (workflow_id, template_step_id) // For querying all assignees on the current step
  }

}

// Table to store **Responses** for each step transition (History)
Table responses {
  id int [pk, increment]
  workflow_id int [not null, ref: > workflows.id]
  template_step_id int [not null, ref: > template_steps.id] // The step that was being responded to
  responder_id int [not null, ref: > users.id]
  response_type response_enum [not null] // 'POSITIVE' ('advance') or 'NEGATIVE' ('send back')
  description text
  created_at timestamp [default: `now()`]

  indexes {
    (workflow_id, template_step_id) // For pulling all responses on a specific step
  }

}

// Table to log history of state changes (for debuggability)
// Captures high-level events like 'ADVANCE', 'SEND_BACK', 'COMPLETED'
Table history {
  id int [pk, increment]
  workflow_id int [not null, ref: > workflows.id]
  template_step_id int [not null, ref: > template_steps.id] // The step *before* the transition
  next_step_order int // The step order *after* the transition
  event_type history_event_enum [not null] // e.g., 'STEP_ADVANCED', 'STEP_SENT_BACK', 'WORKFLOW_COMPLETED'
  triggered_by_response_id int [ref: > responses.id] // Link to the response that triggered the event
  created_at timestamp [default: `now()`]
}

// Separate table for file attachments to responses (better normalization)
Table response_attachments {
  id int [pk, increment]
  response_id int [not null, ref: > responses.id]
  file_url varchar(512) [not null]
  file_name varchar(255)
  created_at timestamp [default: `now()`]
}

// Define Enums for clarity and data integrity
Enum rule_enum {
  ALL // Every assignee must submit a POSITIVE response
  ANY // Any single assignee submits a POSITIVE response
  K_OF_N // K positive responses are required
}

Enum response_enum {
  POSITIVE
  NEGATIVE
}

Enum workflow_status_enum {
  IN_PROGRESS
  COMPLETED
  CANCELED
}

Enum history_event_enum {
  WORKFLOW_STARTED
  STEP_ADVANCED
  STEP_SENT_BACK
  WORKFLOW_COMPLETED
}